<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_item_analysis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="th.ac.cmru.computer.cmcas.ItemAnalysisActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_no"/>

            <TextView
                android:id="@+id/tv_item_percent"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_percent"/>

            <TextView
                android:id="@+id/tv_item_choice1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_choice1"/>

            <TextView
                android:id="@+id/tv_item_choice2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_choice2" />

            <TextView
                android:id="@+id/tv_item_choice3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_choice3" />

            <TextView
                android:id="@+id/tv_item_choice4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_choice4" />

            <TextView
                android:id="@+id/tv_item_choice5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/tv_choice5" />

        </LinearLayout>

        <ListView
            android:id="@+id/listItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false">
        </ListView>

    </LinearLayout>

</layout>
