<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/activity_student_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="th.ac.cmru.computer.cmcas.StudentScoreActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="60dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:text="@string/list_code"/>

                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:text="@string/list_first"/>

                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:text="@string/list_last"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:text="@string/score"/>

            </LinearLayout>

            <ListView
                android:id="@+id/listStdScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>

        <Button
            android:id="@+id/btnExportCSV"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="clickExportCSV"
            android:layout_gravity="center|bottom"
            android:text="@string/btn_export_csv"
            android:textColor="@color/white"
            android:background="@drawable/btn_warning"/>

    </FrameLayout>
</layout>
