<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:id="@+id/activity_student_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="th.ac.cmru.computer.cmcas.StudentNameActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/list_code"
                    android:textColor="@color/blue"
                    android:gravity="center" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/list_first"
                    android:textColor="@color/blue"
                    android:gravity="center" />

                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/list_last"
                    android:textColor="@color/blue"
                    android:gravity="center" />

            </LinearLayout>

            <ListView
                android:id="@+id/listStdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_import_csv"
                android:textColor="@color/white"
                android:background="@drawable/btn_success"
                android:onClick="clickImport"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_clean"
                android:textColor="@color/white"
                android:background="@drawable/btn_danger"
                android:onClick="clickTruncate" />

        </LinearLayout>

    </FrameLayout>

</layout>