<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="th.ac.cmru.computer.cmcas.CameraActivity">

        <SurfaceView
            android:layout_weight="1"
            android:id="@+id/sfvPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAnsSheet"
                android:layout_weight="2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_set_ans"
                android:textColor="@color/white"
                android:onClick="clickAnsSheet"
                android:background="@drawable/btn_info"/>

            <Button
                android:id="@+id/btnShowScore"
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="@color/white"
                android:onClick="clickShowScore"
                android:background="@drawable/btn_warning"/>

            <Button
                android:id="@+id/btnSheet"
                android:layout_weight="2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_chk_ans"
                android:textColor="@color/white"
                android:onClick="clickSheet"
                android:background="@drawable/btn_success"/>

        </LinearLayout>

    </LinearLayout>

</layout>
